name:          algebra
category:      Math, Algebra
version:       2.0
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/algebra/
copyright:     Copyright (C) 2011 Edward A. Kmett
synopsis:      Constructive abstract algebra
description:   Constructive abstract algebra
build-type:    Simple

source-repository head
  type: git
  location: git://github.com/ekmett/algebra.git

library
  other-extensions:
    TypeOperators
    MultiParamTypeClasses
    FlexibleInstances
    FlexibleContexts
    MultiParamTypeClasses
    BangPatterns
    ScopedTypeVariables
    UndecidableInstances
    PatternGuards
    DeriveDataTypeable
    RebindableSyntax
    GeneralizedNewtypeDeriving

  build-depends: 
    array                   >= 0.3.0.2 && < 0.4,
    base                    >= 4       && < 5,
    distributive            >= 0.2     && < 0.3,
    transformers            >= 0.2.0   && < 0.3,
    tagged                  >= 0.2.2.3 && < 0.3,
    categories              >= 0.58.0  && < 0.59,
    containers              >= 0.3     && < 0.5,
    keys                    >= 2.0     && < 2.1,
    mtl                     >= 2.0     && < 2.1,
    semigroups              >= 0.7.1   && < 0.8,
    semigroupoids           >= 1.2.4   && < 1.3,
    representable-functors  >= 2.0     && < 2.1,
    representable-tries     >= 2.0     && < 2.1,
    void                    >= 0.5.4.3 && < 0.6

  exposed-modules:
    Numeric.Additive.Class
    Numeric.Additive.Group
    Numeric.Algebra
    Numeric.Algebra.Class
    Numeric.Algebra.Commutative
    Numeric.Algebra.Complex
    Numeric.Algebra.Complex.Class
    Numeric.Algebra.Distinguished.Class
    Numeric.Algebra.Division
    Numeric.Algebra.Dual
    Numeric.Algebra.Dual.Class
    Numeric.Algebra.Factorable
    Numeric.Algebra.Hopf
    Numeric.Algebra.Hyperbolic
    Numeric.Algebra.Idempotent
    Numeric.Algebra.Incidence
    Numeric.Algebra.Involutive
    Numeric.Algebra.Quaternion
    Numeric.Algebra.Quaternion.Class
    Numeric.Algebra.Unital
    Numeric.Band.Class
    Numeric.Band.Rectangular
    Numeric.Coalgebra.Categorical
    Numeric.Coalgebra.Dual
    Numeric.Coalgebra.Geometric
    Numeric.Coalgebra.Hyperbolic
    Numeric.Coalgebra.Hyperbolic.Class
    Numeric.Coalgebra.Quaternion
    Numeric.Coalgebra.Incidence
    Numeric.Coalgebra.Trigonometric
    Numeric.Coalgebra.Trigonometric.Class
    Numeric.Covector
    Numeric.Decidable.Associates
    Numeric.Decidable.Units
    Numeric.Decidable.Zero
    Numeric.Dioid.Class
    Numeric.Exp
    Numeric.Field.Class
    Numeric.Log
    Numeric.Map
    Numeric.Module.Class
    Numeric.Module.Representable
    Numeric.Order.Additive
    Numeric.Order.Class
    Numeric.Order.LocallyFinite
    Numeric.Partial.Group
    Numeric.Partial.Monoid
    Numeric.Partial.Semigroup
    Numeric.Quadrance.Class
    Numeric.Rig.Characteristic
    Numeric.Rig.Class
    Numeric.Rig.Ordered
    Numeric.Ring.Class
    Numeric.Ring.Division
    Numeric.Ring.Endomorphism
    Numeric.Ring.Local
    Numeric.Ring.Opposite
    Numeric.Ring.Rng
    Numeric.Rng.Class
    Numeric.Rng.Zero
    Numeric.Semiring.Integral
    Numeric.Semiring.Involutive

  ghc-options: -Wall 
