name:          algebra
category:      Math, Algebra
version:       4.3
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/algebra/
bug-reports:   http://github.com/ekmett/algebra/issues
copyright:     Copyright (C) 2011 Edward A. Kmett
synopsis:      Constructive abstract algebra
description:   Constructive abstract algebra
build-type:    Simple
tested-with:   GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4,
               GHC == 7.10.3, GHC == 8.0.1
extra-source-files:
  .ghci
  .gitignore
  .vim.custom
  .travis.yml
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/algebra.git

library
  hs-source-dirs: src

  other-extensions:
    TypeOperators
    MultiParamTypeClasses
    FlexibleInstances
    FlexibleContexts
    MultiParamTypeClasses
    BangPatterns
    ScopedTypeVariables
    UndecidableInstances
    PatternGuards
    DeriveDataTypeable
    RebindableSyntax
    GeneralizedNewtypeDeriving

  build-depends:
    adjunctions             >= 4       && < 5,
    array                   >= 0.3.0.2 && < 0.6,
    base                    == 4.*,
    containers              >= 0.3     && < 0.6,
    distributive            >= 0.2.2   && < 1,
    mtl                     >= 2.0.1   && < 2.3,
    nats                    >= 0.1     && < 2,
    semigroups              >= 0.9     && < 1,
    semigroupoids           >= 4       && < 6,
    transformers            >= 0.2     && < 0.6,
    tagged                  >= 0.4.2   && < 1,
    void                    >= 0.5.5.1 && < 1

  exposed-modules:
    Numeric.Additive.Class
    Numeric.Additive.Group
    Numeric.Algebra
    Numeric.Algebra.Class
    Numeric.Algebra.Commutative
    Numeric.Algebra.Complex
    Numeric.Algebra.Complex.Class
    Numeric.Algebra.Distinguished.Class
    Numeric.Algebra.Division
    Numeric.Algebra.Dual
    Numeric.Algebra.Dual.Class
    Numeric.Algebra.Factorable
    Numeric.Algebra.Hopf
    Numeric.Algebra.Hyperbolic
    Numeric.Algebra.Idempotent
    Numeric.Algebra.Incidence
    Numeric.Algebra.Involutive
    Numeric.Algebra.Quaternion
    Numeric.Algebra.Quaternion.Class
    Numeric.Algebra.Unital
    Numeric.Algebra.Unital.UnitNormalForm
    Numeric.Band.Class
    Numeric.Band.Rectangular
    Numeric.Coalgebra.Categorical
    Numeric.Coalgebra.Dual
    Numeric.Coalgebra.Geometric
    Numeric.Coalgebra.Hyperbolic
    Numeric.Coalgebra.Hyperbolic.Class
    Numeric.Coalgebra.Quaternion
    Numeric.Coalgebra.Incidence
    Numeric.Coalgebra.Trigonometric
    Numeric.Coalgebra.Trigonometric.Class
    Numeric.Covector
    Numeric.Decidable.Associates
    Numeric.Decidable.Nilpotent
    Numeric.Decidable.Units
    Numeric.Decidable.Zero
    Numeric.Dioid.Class
    Numeric.Domain.Class
    Numeric.Domain.GCD
    Numeric.Domain.Euclidean
    Numeric.Domain.Integral
    Numeric.Domain.PID
    Numeric.Domain.UFD
    Numeric.Exp
    Numeric.Field.Class
    Numeric.Field.Fraction
    Numeric.Log
    Numeric.Map
    Numeric.Module.Class
    Numeric.Module.Representable
    Numeric.Order.Additive
    Numeric.Order.Class
    Numeric.Order.LocallyFinite
    Numeric.Partial.Group
    Numeric.Partial.Monoid
    Numeric.Partial.Semigroup
    Numeric.Quadrance.Class
    Numeric.Rig.Characteristic
    Numeric.Rig.Class
    Numeric.Rig.Ordered
    Numeric.Ring.Class
    Numeric.Ring.Division
    Numeric.Ring.Endomorphism
    Numeric.Ring.Local
    Numeric.Ring.Opposite
    Numeric.Ring.Rng
    Numeric.Rng.Class
    Numeric.Rng.Zero
    Numeric.Semiring.ZeroProduct
    Numeric.Semiring.Involutive

  other-modules: Numeric.Domain.Internal

  ghc-options: -Wall -fno-warn-unused-imports
  if impl(ghc >= 8.0.1)
     ghc-options: -Wno-redundant-constraints
